--- a/src/app/clientinventory/portal/portal.component.html
+++ b/src/app/clientinventory/portal/portal.component.html
@@ -4,7 +4,7 @@
 <p></p>
 
 <div style="text-align:center;">
-        <h2>普洱茶倉系統管理頁面</h2> <h3>(登入者:{{User}} , 登入時間: {{LogInTime}})   <button mat-raised-button (click)="logout()" color="primary">登出</button> </h3> 
+        <h2>普洱茶倉系統管理頁面</h2> <h3>(登入者:{{User}} , 登入時間: {{LogInTime}})   <button mat-raised-button (click)="logout()" color="primary">登出</button> </h3>
 </div>
 
 
@@ -12,7 +12,7 @@
 <div class="container"  >
         <div id="rcorners1a" >
                         <div class="row" id ="frontbackground" >
-                                        <h3>庫存系統</h3> 
+                                        <h3>庫存系統</h3>
                                  </div>
                                  <div class="row"   id ="frontbackground"  >
                                    <div class="col">
@@ -28,7 +28,7 @@
         </div>
         <div id="rcorners1a">
                         <div class="row" style="background-color:lightcyan;">
-                                        <h3>推廣文章系統</h3>
+                                        <h3>推廣系統</h3>
                                 </div>
                                 <div class="row" style="background-color:lightcyan;" >
                                   <div class="col">
@@ -37,11 +37,14 @@
                                   <div class="col">
                                          <button class="button"  onclick="location.href='#/articlelist';"><i class="fa fa-cloud-upload" ></i>推廣文章管理 </button>
                                   </div>
+                                  <div class="col">
+                                    <button class="button"  onclick="location.href='#/adimage';"><i class="fa fa-cloud-upload" ></i>藏家頁面廣告管理 </button>
+                                 </div>
                                 </div>
                                 <div class="row" style="background-color:lightcyan;">
                                                 <hr>
-                        </div>
+                                 </div>
 
         </div>
-     
+
 </div>
