change temp title

--- a/src/app/clientinventory/invshow/invshow.component.html
+++ b/src/app/clientinventory/invshow/invshow.component.html
@@ -222,7 +222,7 @@
         </div>
 
 
-        <h2>近六月溫度資料</h2>
+        <h2>近六月溫濕度資料表</h2>
         <carousel  interval="0">
                 <slide *ngFor="let item of images">
                   <img [src]="item.ImageUrl" alt="Pages" style="display: block; width: 100%;">
