working on health component

--- a/src/app/health/healthview/healthview.component.html
+++ b/src/app/health/healthview/healthview.component.html
@@ -8,6 +8,8 @@
   </select>
 </div>
 
+<p></p>
+
 <div *ngIf= "Entity.ClientId">
 
   <table class="table table-bordered table-striped">
@@ -27,7 +29,7 @@
                    名稱:
             </td>
             <td>
-                <b><h1 class="h4">{{Entity.ClientName}} </h1></b>
+                <b>{{Entity.ClientName}} </b>
             </td>
         </tr>
         <tr>
