--- a/src/app/health/healthview/healthview.component.html
+++ b/src/app/health/healthview/healthview.component.html
@@ -66,7 +66,7 @@
         </tr>
     </tbody>
   </table>
-
+  <button type="button" class="btn btn-primary" (click) = save()>儲存紀錄</button>
   <table class="table table-bordered table-striped">
 
       <tbody>
@@ -88,7 +88,7 @@
         <th>
           <button type="button" class="btn btn-primary" (click) = "openModal()">新增紀錄</button>
         </th>
-        <tr *ngFor = 'let item of Entity.InfoHistory' >
+        <tr *ngFor = 'let item of Entity.InfoHistory; let x = index' >
             <td>
                 {{item.DateTime}}
             </td>
@@ -145,7 +145,7 @@
             <td>
                    <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-success" (click) = openform(item.Id)>編輯</button>    |
-                        <button type="button" class="btn btn-sm btn-danger" (click) = delete(item.Id)>刪除</button>
+                        <button type="button" class="btn btn-sm btn-danger" (click) = delete(x)>刪除</button>
                    </div>
             </td>
 
