--- a/src/app/health/healthview/healthview.component.html
+++ b/src/app/health/healthview/healthview.component.html
@@ -66,7 +66,8 @@
         </tr>
     </tbody>
   </table>
-  <button type="button" class="btn btn-primary" (click) = save()>儲存紀錄</button>
+  <button type="button" class="btn btn-lg btn-primary" (click) = save()>儲存紀錄</button>
+  <p></p>
   <table class="table table-bordered table-striped">
 
       <tbody>
@@ -86,7 +87,7 @@
           餐飲
         </th>
         <th>
-          <button type="button" class="btn btn-primary" (click) = "openModal()">新增紀錄</button>
+          <button type="button" class="btn btn-success" (click) = "openModal()">新增紀錄</button>
         </th>
         <tr *ngFor = 'let item of Entity.InfoHistory; let x = index' >
             <td>
@@ -144,7 +145,7 @@
 
             <td>
                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-success" (click) = openform(item.Id)>編輯</button>    |
+                        <button type="button" class="btn btn-sm btn-warning" (click) = editform(x)>編輯</button>    |
                         <button type="button" class="btn btn-sm btn-danger" (click) = delete(x)>刪除</button>
                    </div>
             </td>
