set health inital parameters

--- a/src/app/health/healthview/healthview.component.html
+++ b/src/app/health/healthview/healthview.component.html
@@ -67,7 +67,7 @@
     </tbody>
   </table>
   <button type="button" class="btn btn-lg btn-primary" (click)=save()>儲存紀錄</button>
-  <div *ngIf="change" style="color: red;">The change needs to be clicked the button to save!</div>
+  <div *ngIf="change" style="color: red;">All changes need to click the button to save!</div>
   <p></p>
   <table class="table table-bordered table-striped">
 
