--- a/src/app/clientinventory/invshow/invshow.component.html
+++ b/src/app/clientinventory/invshow/invshow.component.html
@@ -2,249 +2,255 @@
 <p></p>
 
 
-<carousel  >
+<carousel>
   <slide *ngFor="let item of AdImages" class="animated fadeIn">
-    <a [href] = "item.Target_Url" target="_blank">
+    <a [href]="item.Target_Url" target="_blank">
 
-    <img [src]="item.Image_Url" alt="Pages" style="display: block; width: 100%;">
-    <div class="carousel-caption d-none d-md-block" style="color: black;">
+      <img [src]="item.Image_Url" alt="Pages" style="display: block; width: 100%;">
+      <div class="carousel-caption d-none d-md-block" style="color: black;">
         <h3>{{item.Name}}</h3>
         <p>{{item.Comment}}</p>
       </div>
 
-      </a>
+    </a>
   </slide>
 </carousel>
 <p></p>
 <form>
-    <div *ngIf="IsManager">
-           <button type="button" class="btn btn-info" onclick="location.href='#/clientlist';">返回列表</button>
-           <p></p>
-   </div>
+  <div *ngIf="IsManager">
+    <button type="button" class="btn btn-info" onclick="location.href='#/clientlist';">返回列表</button>
+    <p></p>
+  </div>
 
   <div class="form-group">
-        <table class="table table-bordered table-striped">
-                <tbody>
+    <table class="table table-bordered table-striped">
+      <tbody>
 
-                    <tr>
+        <tr>
 
-                        <td>
-                            客戶編號:
-                        </td>
-                        <TD>
-                                {{Entity.ClientId}}
-                        </TD>
-                    </tr>
-                    <tr>
-                        <td>
-                               客戶名稱:
-                        </td>
-                        <td>
-                            <b><h1 class="h4">{{Entity.ClientName}} </h1></b>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            地址:
-                        </td>
-                        <td>
-                                {{Entity.Address}}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            電話:
-                        </td>
-                        <td>
-                            {{Entity.Phone}}
-                        </td>
-                </tbody>
-        </table>
-        <div *ngIf="IsManager">
-            <table class="table table-bordered table-striped table-hover">
-                <tr>
-                    <th>
-                        序號
-                    </th>
-                    <th>
-                       產品編號
-                    </th>
-                    <th>
-                        產品名稱
-                    </th>
-                    <th>
-                        入庫數量
-                    </th>
-                    <th>
-                        單位
-                    </th>
-                    <th>
-                        出庫數量
-                    </th>
-                    <th>
-                        庫存量
-                  </th>
-                </tr>
+          <td>
+            客戶編號:
+          </td>
+          <TD>
+            {{Entity.ClientId}}
+          </TD>
+        </tr>
+        <tr>
+          <td>
+            客戶名稱:
+          </td>
+          <td>
+            <b>
+              <h1 class="h4">{{Entity.ClientName}} </h1>
+            </b>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            地址:
+          </td>
+          <td>
+            {{Entity.Address}}
+          </td>
+        </tr>
+        <tr>
+          <td>
+            電話:
+          </td>
+          <td>
+            {{Entity.Phone}}
+          </td>
+      </tbody>
+    </table>
+    <div *ngIf="IsManager">
+      <table class="table table-bordered table-striped table-hover">
+        <tr>
+          <th>
+            序號
+          </th>
+          <th>
+            產品編號
+          </th>
+          <th>
+            產品名稱
+          </th>
+          <th>
+            入庫數量
+          </th>
+          <th>
+            單位
+          </th>
+          <th>
+            出庫數量
+          </th>
+          <th>
+            庫存量
+          </th>
+        </tr>
 
 
-                    <tbody>
-                        <tr *ngFor = 'let item of Entity.Inventories; let x = index  ' >
-                            <td>
-                                {{ x  + 1 }}
-                            </td>
-                            <td>
-                                {{item.ProductId}}
-                            </td>
-                            <td>
-                                {{ item.ProductName}}
-                            </td>
-                            <td>{{ item.Stock }}</td>
+        <tbody>
+          <tr *ngFor='let item of Entity.Inventories; let x = index  '>
+            <td>
+              {{ x  + 1 }}
+            </td>
+            <td>
+              {{item.ProductId}}
+            </td>
+            <td>
+              {{ item.ProductName}}
+            </td>
+            <td>{{ item.Stock }}</td>
 
-                            <td>
-                                {{ item.Unit }}
-                            </td>
-                            <td>
-                                {{ item.Return}}
-                            </td>
-                            <td>
-                                {{ item.NotReturn}}
-                            </td>
+            <td>
+              {{ item.Unit }}
+            </td>
+            <td>
+              {{ item.Return}}
+            </td>
+            <td>
+              {{ item.NotReturn}}
+            </td>
 
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                            <tr>
-                              <td>總計</td>
-                              <td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td>總計</td>
+            <td>
 
-                                </td>
-                                <td>
+            </td>
+            <td>
 
-                                </td>
-                                <td>
-                                    {{ stock_sum }}
+            </td>
+            <td>
+              {{ stock_sum }}
 
-                                </td>
+            </td>
 
-                                <td>
+            <td>
 
-                                </td>
-                                <td>
-                                    {{ return_sum}}
-                                </td>
-                                <td>
-                                    {{ notreturn_sum }}
-                                </td>
-                            </tr>
-                    </tfoot>
+            </td>
+            <td>
+              {{ return_sum}}
+            </td>
+            <td>
+              {{ notreturn_sum }}
+            </td>
+          </tr>
+        </tfoot>
 
-            </table>
+      </table>
+    </div>
+    <div *ngIf="!IsManager">
+      <table class="table table-bordered table-striped table-hover">
+        <tr>
+          <th>
+            序號
+          </th>
+          <th>
+            產品編號
+          </th>
+          <th>
+            產品名稱
+          </th>
+          <th>
+            入庫數量
+          </th>
+          <th>
+            單位
+          </th>
+          <th>
+            出庫數量
+          </th>
+          <th>
+            庫存量
+          </th>
+        </tr>
+
+
+        <tbody>
+          <tr *ngFor='let item of userInvertories; let x = index;'>
+            <td>
+              {{ x  + 1 }}
+            </td>
+            <td>
+              {{item.ProductId}}
+            </td>
+            <td>
+              {{ item.ProductName}}
+            </td>
+            <td>{{ item.Stock }}</td>
+
+            <td>
+              {{ item.Unit }}
+            </td>
+            <td>
+              {{ item.Return}}
+            </td>
+            <td>
+              {{ item.NotReturn}}
+            </td>
+
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td>總計</td>
+            <td>
+
+            </td>
+            <td>
+
+            </td>
+            <td>
+              {{ stock_sum }}
+
+            </td>
+
+            <td>
+
+            </td>
+            <td>
+              {{ return_sum}}
+            </td>
+            <td>
+              {{ notreturn_sum }}
+            </td>
+          </tr>
+        </tfoot>
+
+      </table>
+    </div>
+
+
+    <h2>近六月溫濕度資料表</h2>
+    <carousel interval="0">
+      <slide *ngFor="let item of images">
+        <img [src]="item.ImageUrl" alt="Pages" style="display: block; width: 100%;">
+        <div class="carousel-caption d-none d-md-block">
         </div>
-        <div *ngIf="!IsManager">
-            <table class="table table-bordered table-striped table-hover">
-                <tr>
-                        <th>
-                                序號
-                            </th>
-                            <th>
-                               產品編號
-                            </th>
-                            <th>
-                                產品名稱
-                            </th>
-                            <th>
-                                入庫數量
-                            </th>
-                            <th>
-                                單位
-                            </th>
-                            <th>
-                                出庫數量
-                            </th>
-                            <th>
-                                庫存量
-                          </th>
-                </tr>
+      </slide>
+    </carousel>
+
+    <div *ngIf="IsManager">
+      <p></p>
+      <button type="button" class="btn btn-info" onclick="location.href='#/clientlist';">返回列表</button>
+      <p></p>
+    </div>
+
+    <hr>
 
 
-                    <tbody>
-                        <tr *ngFor = 'let item of userInvertories; let x = index;' >
-                            <td>
-                                {{ x  + 1 }}
-                            </td>
-                            <td>
-                                {{item.ProductId}}
-                            </td>
-                            <td>
-                                {{ item.ProductName}}
-                            </td>
-                            <td>{{ item.Stock }}</td>
-
-                            <td>
-                                {{ item.Unit }}
-                            </td>
-                            <td>
-                                {{ item.Return}}
-                            </td>
-                            <td>
-                                {{ item.NotReturn}}
-                            </td>
-
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                            <tr>
-                              <td>總計</td>
-                              <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-                                    {{ stock_sum }}
-
-                                </td>
-
-                                <td>
-
-                                </td>
-                                <td>
-                                    {{ return_sum}}
-                                </td>
-                                <td>
-                                    {{ notreturn_sum }}
-                                </td>
-                            </tr>
-                          </tfoot>
-
-            </table>
-        </div>
-
-
-        <h2>近六月溫濕度資料表</h2>
-        <carousel  interval="0">
-                <slide *ngFor="let item of images">
-                  <img [src]="item.ImageUrl" alt="Pages" style="display: block; width: 100%;">
-                  <div class="carousel-caption d-none d-md-block">
-                  </div>
-                </slide>
-        </carousel>
-
-        <div *ngIf="IsManager">
-            <p></p>
-                <button type="button" class="btn btn-info" onclick="location.href='#/clientlist';">返回列表</button>
-                <p></p>
-        </div>
-
-        <hr>
-
-
-        <ul>
-          <li *ngFor="let item of AdTextLinks">
-           <h2> <a [href]="item.Target_Url" target="_blank"> {{item.Name}}</a></h2>
-          </li>
-        </ul>
+    <ul>
+      <li *ngFor="let item of AdTextLinks">
+        <h2> <a [href]="item.Target_Url" target="_blank"> {{item.Name}}</a></h2>
+      </li>
+    </ul>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WynX1gM7JT4" frameborder="1"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
 
   </div>
@@ -252,11 +258,6 @@
 
 
 
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-scale-multiple"
->
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
   <p style="font-size: 20px; color: white">處理中...</p>
 </ngx-spinner>
